# django_movie_drf

./: pyproject.toml
django_movie/django_movie/: settings.py  urls.py  yasg.py
django_movie/movies/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
django_movie/movies/fixtures/: data.json
